# mediaplayer

./: README.md
mediaplayer/: .gitignore  AUTHORS  NEWS  README  configure.ac
mediaplayer/src/: .gitignore  Application.cpp  Application.h  Makefile.am  MpvHandleWrapper.cpp  MpvHandleWrapper.h  application.cpp  application.h  main.cpp  mpv_handle_wrapper.cpp  mpv_handle_wrapper.h
mediaplayer/src/Dialogs/: Gtk3FileDialog.cpp  Gtk3FileDialog.h  IFileDialog.h  Makefile.am  file_dialog.h  gtk3_file_dialog.cpp  gtk3_file_dialog.h
mediaplayer/src/Factories/: IMenuFactory.h  Makefile.am  MenuBarFactory.cpp  MenuBarFactory.h  menu_bar_factory.cpp  menu_bar_factory.h  menu_factory.h
mediaplayer/src/Utils/: KeyNameTranslator.cpp  KeyNameTranslator.h  Makefile.am  key_name_translator.cpp  key_name_translator.h
mediaplayer/src/Views/: Makefile.am  Menubar.xml  menubar.xml  views.gresource.xml
mediaplayer/src/Widgets/: ControlPanel.cpp  ControlPanel.h  Makefile.am  MpvContainer.cpp  MpvContainer.h  Slider.cpp  Slider.h  Window.cpp  Window.h  control_panel.cpp  control_panel.h  mpv_container.cpp  mpv_container.h  slider.cpp  slider.h  window.cpp  window.h
