noinst_LTLIBRARIES = libmediaplayer-widgets.la
libmediaplayer_widgets_la_SOURCES = Window.cpp \
                            MpvContainer.cpp \
                            Slider.cpp \
                            ControlPanel.cpp
libmediaplayer_widgets_la_CXXFLAGS = $(MEDIAPLAYER_CFLAGS)
libmediaplayer_widgets_la_LIBADD = $(MEDIAPLAYER_LIBS)